# api/swagger/swagger.yaml
@@ -41,6 +41,39 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
 
+  /login/facebook:
+    x-swagger-router-controller: login
+    get:
+      description: |
+        Login (or registration) with Facebook Login (oAuth2)
+      operationId: facebook
+      produces: ['text/plain']
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: string
+        default:
+          description: Error
+          schema:
+            type: string
+            
+  /login/facebook/callback:
+    x-swagger-router-controller: login
+    get:
+      description: |
+        Login (or registration) with Facebook Login (oAuth2)
+      operationId: facebook-callback
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/SuccessResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"            
+
   /users:
     x-swagger-router-controller: users
     post:
@@ -165,11 +198,6 @@ definitions:
   BaseUser:
     description: |
       Contains the properties of a user, except for their username and password and verified flag
-    required:
-    - email
-    - country
-    - locale
-    - timezone
     properties:
       email:
         type: string
